--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,10 @@ jobs:
       - checkout
       - run:
           name: Build and run tests
-          command: fastlane scan
+          command: bundle exec fastlane scan
           environment:
             SCAN_DEVICE: iPhone 6
-            SCAN_SCHEME: WebTests
+            SCAN_SCHEME: SDRlingTests
       - store_test_results:
           path: test_output/report.xml
       - store_artifacts:
