--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,11 @@
+git_checkout: &git_checkout
+  run:
+    name: Perform shallow clone and checkout
+    command: |
+      mkdir ~/.ssh/ \
+      echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && \
+      git clone --depth=1 -b $CIRCLE_BRANCH $CIRCLE_REPOSITORY_URL ./ && \
+      git checkout $CIRCLE_SHA1
 aliases:
   - &bundle_install
     name: Execute `bundle install`
@@ -30,7 +38,7 @@ jobs:
     macos:
       xcode: "10.3.0"
     steps:
-      - checkout
+      - *git_checkout
       - restore_cache: *restore_gem
       - run: *bundle_install
       - save_cache: *save_gem
