--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,10 @@ git_checkout: &git_checkout
   run:
     name: Perform shallow clone and checkout
     command: |
-      mkdir -p ~/.ssh/ \
+      mkdir -p ~/.ssh && \
       echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && \
+      ls -lia && \
+      pwd && \
       git clone --depth=1 -b $CIRCLE_BRANCH $CIRCLE_REPOSITORY_URL ./ && \
       git checkout $CIRCLE_SHA1
 aliases:
