--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,12 @@
-git_checkout: &git_checkout
-  run:
-    name: Perform shallow clone and checkout
-    command: |
-      mkdir -p ~/.ssh && \
-      echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && \
-      git clone --depth=1 -b $CIRCLE_BRANCH $CIRCLE_REPOSITORY_URL ./ && \
-      git checkout $CIRCLE_SHA1
 aliases:
+  - &git_checkout
+    run:
+      name: Perform shallow clone and checkout
+      command: |
+        mkdir -p ~/.ssh && \
+        echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && \
+        git clone --depth=1 -b $CIRCLE_BRANCH $CIRCLE_REPOSITORY_URL ./ && \
+        git checkout $CIRCLE_SHA1
   - &bundle_install
     name: Execute `bundle install`
     command: bundle install --path vendor/bundle
