--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ aliases:
         mkdir -p ~/.ssh && \
         echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && \
         git clone --depth=1 -b $CIRCLE_BRANCH $CIRCLE_REPOSITORY_URL ./ && \
-        git checkout $CIRCLE_SHA1
+        git reset --hard $CIRCLE_SHA1
   - &bundle_install
     name: Execute `bundle install`
     command: bundle install --path vendor/bundle
