--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,10 @@ aliases:
         echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && \
         git clone --depth=1 -b $CIRCLE_BRANCH $CIRCLE_REPOSITORY_URL ./ && \
         git reset --hard $CIRCLE_SHA1
+  - &replace_vars
+    run:
+      name: Replace vars
+      command: bash pre_deployment.sh
   - &bundle_install
     name: Execute `bundle install`
     command: bundle install --path vendor/bundle
@@ -39,6 +43,7 @@ jobs:
       xcode: "11.3.1"
     steps:
       - *git_checkout
+      - *replace_vars
       - restore_cache: *restore_gem
       - run: *bundle_install
       - save_cache: *save_gem
