--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ aliases:
       command: |
         mkdir -p ~/.ssh && \
         echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config && \
+        git config --global gc.auto 0 || true && \
         git clone --depth=1 -b $CIRCLE_BRANCH $CIRCLE_REPOSITORY_URL ./ && \
         git reset --hard $CIRCLE_SHA1
   - &replace_vars
